compiler/tests/schema/error/service_invalid_base_type_param.bond
namespace tests

// Invalid service definition with type param as base
service Foo<T> : T
{
    nothing bar();
}  
